force-app/main/default/objects/Google_Config__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <label>Base_Url</label>
    <type>Url</type>
</CustomField>