force-app/main/default/objects/Google_Config__mdt/fields/Event_Url__c.field-meta.xml
<CustomField>
    <fullName>Event_Url__c</fullName>
    <label>Event Url</label>
    <type>Url</type>
</CustomField>