force-app/main/default/objects/Google_Config__mdt/fields/expires_in_seconds__c.field-meta.xml
<CustomField>
    <fullName>expires_in_seconds__c</fullName>
    <label>expires in (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>