force-app/main/default/objects/Google_Config__mdt/fields/redirct_url__c.field-meta.xml
<CustomField>
    <fullName>redirct_url__c</fullName>
    <label>redirct_url</label>
    <type>Url</type>
</CustomField>