force-app/main/default/objects/Google_Config__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <label>token_url</label>
    <type>Url</type>
</CustomField>